--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,3 +19,4 @@ spring.jpa.properties.hibernate.format_sql=true
 jwt.secret=a-string-secret-at-least-256-bits-long-jayashan
 spring.security.user.name=yourUsername
 spring.security.user.password=yourPassword
+clerk.jwks.url=https://wealthy-weevil-15.clerk.accounts.dev/.well-known/jwks.json
